[package]
name = "grab-xkcd"
version = "0.1.0"
authors = ["Alexander M. <alexm33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", version = "3.0.0-beta.1" }
anyhow = "1.0.31"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"
